# termux-proot

./: CMakeLists.txt
cmake/: gen_loader_info.cmake
src/: GNUmakefile
talloc/lib/replace/: replace.h
talloc/lib/replace/system/: network.h  passwd.h
